@@ -3,6 +3,9 @@
 - A command line option --fullscreen was added to put a new window into
   fullscreen mode automatically.
 - Users can open only one preferences dialog per terminal window now.
+- The shortcut for the commandline option --title is now -T, because thats
+  seems to be common among terminal emulators. -t is still supported for
+  compatbility with gnome-terminal, but may be removed in the future.
 
 
 0.2.0
