@@ -1,3 +1,9 @@
+2004-12-07	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-screen.c, terminal/terminal-options.c,
+	  terminal/main.c: Use -T as shortcut for --title. -t is
+	  still supported for compatibility with gnome-terminal.
+
 2004-12-06	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-window.c: Users can open only one preferences
